# linkdoc

./: .travis.yml  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
src/: crawling.rs  fetching.rs  main.rs  parsing.rs  unique.rs
