[package]
name = "linkdoc"
version = "0.1.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]

[dependencies]
hyper = "0.5.0"

[dependencies.html5ever]
git = "https://github.com/servo/html5ever"

[dependencies.html5ever_dom_sink]
git = "https://github.com/servo/html5ever"
path = "dom_sink"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.clippy]
git = "https://github.com/Manishearth/rust-clippy"
