[package]
name = "linkdoc"
description = "Walks all the web pages in a domain to find dead links."
version = "0.2.0"
authors = ["Wilfred Hughes <me@wilfred.me.uk>"]
license = "MIT"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
scraper = "0.17.1"
url = "2.4.1"
colored = "2.0.4"
clap = { version = "3", features = ["cargo", "wrap_help"] }
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
